2.5.2
------

2.5.1
------
(RB=478810)
Fixed a bug in processing of custom types in association resource keys.

(RB=478809)
Handle error responses and batch results correctly in output validation filter.

(RB=475504)
Broke down r2 into r2-core and r2-netty.
Removed dependency on json and jackson core from some modules.

(RB=481030)
Fix bug that request builder generator may generate duplicate data template class.

2.5.0
------
(RB=475440 cont')
Make ChannelPoolHander iterate through all connection tokens.

(RB=438141)
Modify content-encoding and content-length headers when decompressing body.

(RB=445269)
New finer-grain data template and request builder generator classes and structure.

2.4.4
------
(RB=475440)
Fix a bug in ChannelPoolHandler where it should NOT put a channel back to the pool if
there is a "connection:close" header in the response.

(RB=444340)
Rest.li data validator, ReadOnly and CreateOnly Rest.li data annotations.

2.4.3
------
(RB=468269)
Remove try-catch in parseAcceptEncodingHeader().

(RB=475642)
Removing unused title field from the Link.pdsc.

2.4.2
------
(RB=473188)
Add back log4j.xml in generator and data-avro-generator module.

2.4.1
------
(RB=453114)
Add new status code constants for redirection and added new property key for redirection hops.

(RB=471298)
Fix a bug in HttpClientFactory where _clientsOutstanding can go negative if client#shutdown 
is called multiple times on the same client and thus preventing clientFactory to be shutdown.

(RB=472316)
bug fix in ConfigRunner of d2 quick-start example

2.4.0
------
(RB=462831)
Fix race condition in D2 when Zookeeper is slow.
(RB=444062)
Migrate r2 to netty4.
(RB=444153)
Add more r2 integration tests.
(RB=444082)
Refactor restli-int-test to properly shutdown R2 client/clientFactory

2.3.0
------
(RB=433868)
Handle key coercion error for CompoundKey and BatchKey to return 400.
(RB=426274)
Rewrite KeyMapper API

2.2.11
------
(RB=455451)