@@ -19,7 +19,6 @@ dependencies {
   testCompile externalDependency.commonsIo
   testCompile externalDependency.easymock
   testCompile project(':r2-jetty')
-  testRuntime externalDependency.cglib
 }
 
 task packup(dependsOn: configurations.default.allArtifacts, type: Copy) {
