@@ -1,7 +1,7 @@
 {
   "type" : "record",
   "name" : "PatchTreeTestModel",
-  "namespace" : "com.linkedin.data.transform.test",
+  "namespace" : "com.linkedin.restli.client.util.test",
   "fields" : [
     {
       "name" : "fooRequired",
@@ -27,7 +27,7 @@
       "type" : {
         "type" : "enum",
         "name" : "FooEnum",
-        "namespace" : "com.linkedin.data.transform.test",
+        "namespace" : "com.linkedin.restli.client.util.test",
         "symbols" : [ "A", "B" ]
       }
     },
@@ -36,7 +36,7 @@
       "type" : {
         "type" : "record",
         "name" : "FooRecordTemplate",
-        "namespace" : "com.linkedin.data.transform.test",
+        "namespace" : "com.linkedin.restli.client.util.test",
         "fields" : [
           {
             "name" : "bar",
