@@ -15,7 +15,6 @@ dependencies {
   testCompile externalDependency.easymock
   testCompile externalDependency.commonsHttpClient
   testCompile externalDependency.mockito
-  testRuntime externalDependency.cglib
   testRuntime externalDependency.objenesis
 }
 
