@@ -21,6 +21,7 @@ include 'generator'
 include 'generator-test'
 include 'restli-contrib-spring'
 include 'restli-client'
+include 'restli-client-util-recorder'
 include 'restli-docgen'
 include 'restli-server'
 include 'restli-server-extras'
